namespace Adv.Effects
{
    public interface Effect
    {
        void Activate();
    }
}