public interface IFactory<T>
{
     T Create();
}